--- a/swarm-cluster/Vagrantfile
+++ b/swarm-cluster/Vagrantfile
@@ -44,6 +44,10 @@ Vagrant.configure("2") do |config|
 	sudo yum install -y docker-ce docker-ce-cli containerd.io
 	sudo systemctl start docker
 	sudo systemctl enable docker
+	# docker-compose
+	sudo curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+	sudo chmod +x /usr/local/bin/docker-compose
+	sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
   SHELL
   
   # Setting up static hostnames 
